- maxBoost and overallmaxBoost inputs

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <label><input type="checkbox" id="forceMLP"> Force 1st mic position @ MLP</label>
         <br>
         <label>End Frequency (100-10000):<input type="number" id="endFreq" name="endFreq" min="100" max="10000" value="250"/></label>
+        <label>Max Boost (0-6):<input type="number" id="maxBoost" name="maxBoost" min="0" max="6" value="0"/></label>
+        <label>Overall Max Boost (0-6):<input type="number" id="omaxBoost" name="omaxBoost" min="0" max="6" value="0"/></label>
       </small>
     </div>
     <div class="notice">*Evo will perform best with default options with the majority of set ups</div>
