Preferences windows and config store

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <title>A1 Evo - OCA 2024</title>
 </head>
 
-<body>
+<body onpageshow="getConfig()">
   <div class="container">
     <h2>A1 Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">maestro</span></h2>
       <h3>Steps</h3>
