--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A1 Evo - Settings</title>
 </head>
-<body>
+<body onpageshow="getSettingsConfig()">
   <div class="container">
     <h3>A1Evo Defaults</h3>
     <div class="customization-options"> 
