Target curve selection dialogs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="customization-options">
         <small>
           <label>
-            Target Curve: <input type="text" id="targetCurve" name="targetCurve" minlength="10" maxlength="200"/>
+            Target Curve: <input type="text" onclick="targetDialog()" id="targetCurve" name="targetCurve" minlength="4" maxlength="200" size="80"/>
           </label>
           <label>
             End Frequency (100-10000): <input type="number" id="endFreq" name="endFreq" min="100" max="10000" value="250"/>
