Logic on XO selector to avoid bad XO array. And some warnings.

--- a/settings.html
+++ b/settings.html
@@ -104,6 +104,10 @@
     </script>
     <h3 class="collapsible">A1Evo Crossovers Preferences</h3>
     <div class="xo-content">
+      <div class="bignotice">
+        * Please note that values entered aren't check against your specificy AVR.<br>
+        * Setting only the LOW value forces XO to that value.
+      </div>
       <div class="xo-options">
         <form>
           <script>showXOSelectors()</script>
