Custom XOs settings, minor UI changes

--- a/index.html
+++ b/index.html
@@ -115,8 +115,17 @@
           </label>
         </small>
       </div>
-      
+
       <div class="notice">*Evo will perform best with the default options with majority of systems</div>
+      <h3 class="collapsible">A1Evo Crossovers Preferences</h3>
+      <div class="xo-content">
+        <div class="bignotice">
+          * Here you can set crossovers search ranges for each channel.<br>
+          * Please note that values entered aren't check against your specificy AVR.<br>
+          * Setting only the LOW value forces XO to that value.
+        </div>
+        <div id="run-xo-options" class="xo-options"></div>
+      </div>
       <h2 class="log-heading">Progress log:</h2>
       <pre id="logContainer"></pre>
     </div>
