--- a/settings.html
+++ b/settings.html
@@ -105,6 +105,7 @@
     <h3 class="collapsible">A1Evo Crossovers Preferences</h3>
     <div class="xo-content">
       <div class="bignotice">
+        * Here you can set crossovers search ranges for each channel.<br>
         * Please note that values entered aren't check against your specificy AVR.<br>
         * Setting only the LOW value forces XO to that value.
       </div>
