User can change working/output folder in settings. UI allow restart after finishing a run

--- a/settings.html
+++ b/settings.html
@@ -115,7 +115,7 @@
     <div class="customization-options">
       <label>
         Work Directory:
-        <input type="text" id="workingDir_set" name="workingDir_set" minlength="4" maxlength="200" size="80" value="A1Evo" onchange="settingsChanged()" onclick="workingDialog()"/>
+        <input type="text" id="workingDir_set" name="workingDir_set" minlength="4" maxlength="200" size="80" value="A1Evo" onclick="workingDialog()"/>
       </label>
     </div>
     <script src="./settings.js"></script>
