Bug fix for filter response start frequency. UI to define HF limit

--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             Target Curve: <input type="text" onclick="targetDialog()" id="targetCurve" name="targetCurve" minlength="4" maxlength="200" size="80"/>
           </label>
           <label>
-            End Frequency (100-10000): <input type="number" id="endFreq" name="endFreq" min="100" max="10000" value="250"/>
+            Transition Frequency (100-400): <input type="number" id="endFreq" name="endFreq" min="100" max="400" value="250"/>
+          </label>
+          <label>
+            High Frequency Limit (1000-20000): <input type="number" id="highFreq" name="highFreq" min="1000" max="20000" value="10000"/>
           </label>
           <label>
             Max Boost (0-12): <input type="number" id="maxBoost" name="maxBoost" min="0" max="12" value="0"/>
