--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             Target Curve: <input type="text" onclick="targetDialog()" id="targetCurve" name="targetCurve" minlength="4" maxlength="200" size="80"/>
           </label>
           <label>
-            Transition Frequency (100-400): <input type="number" id="endFreq" name="endFreq" min="100" max="400" value="250"/>
+            Transition Frequency (100-1000): <input type="number" id="endFreq" name="endFreq" min="100" max="1000" value="250"/>
           </label>
           <label>
             Max Boost (0-12): <input type="number" id="maxBoost" name="maxBoost" min="0" max="12" value="0"/>
@@ -125,6 +125,9 @@
             <input type="checkbox" id="allowHS" onchange="updateCheckboxStates('allowHS')" disabled />
             Allow High Shelf
             <span class="explanation">Allow High Shelf EQ filter above transition frequency</span>
+          </label>
+          <label>
+            High Shelf Boost (0-6): <input type="number" id="hsFreq" name="hsFreq" min="0" max="6" value="2" disabled/>
           </label>
           <label>
             <input type="checkbox" id="usePSY" onchange="updateCheckboxStates('usePSY')" disabled />
