--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <label>
             <input type="checkbox" id="eqHF" onchange="updateCheckboxStates('eqHF')"/>
             EQ over transition frequency
-            <span class="explanation">Allow High Shelf EQ filter above transition frequency</span>
+            <span class="explanation">EQ filter above transition frequency</span>
           </label>
           <label>
             High Frequency Limit (1000-20000): <input type="number" id="highFreq" name="highFreq" min="1000" max="20000" value="10000" disabled/>
